// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Game Play > (1) Player 2427_Rose places tile [8G] 1`] = `
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - 0 - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -

P2427_Rose | $6000 | [4E] [5A] [3I] [11B] | 
P5031_Nate | $6000 | [8I] [4D] [2C] [1F] [2G] | 

P2427_Rose [End Turn]
`;

exports[`Game Play > (2) Player 2427_Rose ends turn 1`] = `
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - 0 - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -

P2427_Rose | $6000 | [4E] [5A] [3I] [11B] [2D] | 
P5031_Nate | $6000 | [8I] [4D] [2C] [1F] [2G] | 

P5031_Nate [Choose Tile: [8I] [4D] [2C] [1F] [2G]]
`;

exports[`Game Play > (3) Player 5031_Nate places tile [2G] 1`] = `
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - 0 - - - - - 0 - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -

P2427_Rose | $6000 | [4E] [5A] [3I] [11B] [2D] | 
P5031_Nate | $6000 | [8I] [4D] [2C] [1F] | 

P5031_Nate [End Turn]
`;

exports[`Game Play > (4) Player 5031_Nate ends turn 1`] = `
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - 0 - - - - - 0 - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -

P2427_Rose | $6000 | [4E] [5A] [3I] [11B] [2D] | 
P5031_Nate | $6000 | [8I] [4D] [2C] [1F] [11D] | 

P2427_Rose [Choose Tile: [4E] [5A] [3I] [11B] [2D]]
`;

exports[`Game Play > (5) Player 2427_Rose places tile [4E] 1`] = `
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - 0 - - - - - - - -
 - - - - - - - - - - - -
 - 0 - - - - - 0 - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -

P2427_Rose | $6000 | [5A] [3I] [11B] [2D] | 
P5031_Nate | $6000 | [8I] [4D] [2C] [1F] [11D] | 

P2427_Rose [End Turn]
`;

exports[`Game Play > (6) Player 2427_Rose ends turn 1`] = `
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - 0 - - - - - - - -
 - - - - - - - - - - - -
 - 0 - - - - - 0 - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -

P2427_Rose | $6000 | [5A] [3I] [11B] [2D] [9E] | 
P5031_Nate | $6000 | [8I] [4D] [2C] [1F] [11D] | 

P5031_Nate [Choose Tile: [8I] [4D] [2C] [1F] [11D]]
`;

exports[`Game Play > (7) Player 5031_Nate places tile [4D] 1`] = `
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - 0 - - - - - - - -
 - - - 0 - - - - - - - -
 - - - - - - - - - - - -
 - 0 - - - - - 0 - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -

P2427_Rose | $6000 | [5A] [3I] [11B] [2D] [9E] | 
P5031_Nate | $6000 | [8I] [2C] [1F] [11D] | 

P5031_Nate [Choose Hotel: A C F I L T W]
`;

exports[`Game Play > (8) Player 5031_Nate starts American 1`] = `
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - A - - - - - - - -
 - - - A - - - - - - - -
 - - - - - - - - - - - -
 - 0 - - - - - 0 - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -

P2427_Rose | $6000 | [5A] [3I] [11B] [2D] [9E] | 
P5031_Nate | $6000 | [8I] [2C] [1F] [11D] | A:1

P5031_Nate [Choose Shares: A] [End Turn]
`;

exports[`Game Play > (9) Player 5031_Nate purchases American 1`] = `
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - A - - - - - - - -
 - - - A - - - - - - - -
 - - - - - - - - - - - -
 - 0 - - - - - 0 - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -

P2427_Rose | $6000 | [5A] [3I] [11B] [2D] [9E] | 
P5031_Nate | $5700 | [8I] [2C] [1F] [11D] | A:2

P5031_Nate [Choose Shares: A] [End Turn]
`;

exports[`Game Play > (10) Player 5031_Nate purchases American 1`] = `
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - A - - - - - - - -
 - - - A - - - - - - - -
 - - - - - - - - - - - -
 - 0 - - - - - 0 - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -

P2427_Rose | $6000 | [5A] [3I] [11B] [2D] [9E] | 
P5031_Nate | $5400 | [8I] [2C] [1F] [11D] | A:3

P5031_Nate [Choose Shares: A] [End Turn]
`;

exports[`Game Play > (11) Player 5031_Nate purchases American 1`] = `
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - A - - - - - - - -
 - - - A - - - - - - - -
 - - - - - - - - - - - -
 - 0 - - - - - 0 - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -

P2427_Rose | $6000 | [5A] [3I] [11B] [2D] [9E] | 
P5031_Nate | $5100 | [8I] [2C] [1F] [11D] | A:4

P5031_Nate [End Turn]
`;

exports[`Game Play > (12) Player 5031_Nate ends turn 1`] = `
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - A - - - - - - - -
 - - - A - - - - - - - -
 - - - - - - - - - - - -
 - 0 - - - - - 0 - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -

P2427_Rose | $6000 | [5A] [3I] [11B] [2D] [9E] | 
P5031_Nate | $5100 | [8I] [2C] [1F] [11D] [10G] | A:4

P2427_Rose [Choose Tile: [5A] [3I] [11B] [2D] [9E]]
`;

exports[`Game Play > (13) Player 2427_Rose places tile [9E] 1`] = `
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - A - - - - - - - -
 - - - A - - - - 0 - - -
 - - - - - - - - - - - -
 - 0 - - - - - 0 - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -

P2427_Rose | $6000 | [5A] [3I] [11B] [2D] | 
P5031_Nate | $5100 | [8I] [2C] [1F] [11D] [10G] | A:4

P2427_Rose [Choose Shares: A] [End Turn]
`;

exports[`Game Play > (14) Player 2427_Rose purchases American 1`] = `
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - A - - - - - - - -
 - - - A - - - - 0 - - -
 - - - - - - - - - - - -
 - 0 - - - - - 0 - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -

P2427_Rose | $5700 | [5A] [3I] [11B] [2D] | A:1
P5031_Nate | $5100 | [8I] [2C] [1F] [11D] [10G] | A:4

P2427_Rose [Choose Shares: A] [End Turn]
`;

exports[`Game Play > (15) Player 2427_Rose ends turn 1`] = `
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - A - - - - - - - -
 - - - A - - - - 0 - - -
 - - - - - - - - - - - -
 - 0 - - - - - 0 - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -

P2427_Rose | $5700 | [5A] [3I] [11B] [2D] [7G] | A:1
P5031_Nate | $5100 | [8I] [2C] [1F] [11D] [10G] | A:4

P5031_Nate [Choose Tile: [8I] [2C] [1F] [11D] [10G]]
`;

exports[`Game Play > (16) Player 5031_Nate places tile [10G] 1`] = `
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - A - - - - - - - -
 - - - A - - - - 0 - - -
 - - - - - - - - - - - -
 - 0 - - - - - 0 - 0 - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -

P2427_Rose | $5700 | [5A] [3I] [11B] [2D] [7G] | A:1
P5031_Nate | $5100 | [8I] [2C] [1F] [11D] | A:4

P5031_Nate [Choose Shares: A] [End Turn]
`;

exports[`Game Play > (17) Player 5031_Nate ends turn 1`] = `
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - A - - - - - - - -
 - - - A - - - - 0 - - -
 - - - - - - - - - - - -
 - 0 - - - - - 0 - 0 - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -

P2427_Rose | $5700 | [5A] [3I] [11B] [2D] [7G] | A:1
P5031_Nate | $5100 | [8I] [2C] [1F] [11D] [8F] | A:4

P2427_Rose [Choose Tile: [5A] [3I] [11B] [2D] [7G]]
`;

exports[`Game Play > (18) Player 2427_Rose places tile [7G] 1`] = `
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - A - - - - - - - -
 - - - A - - - - 0 - - -
 - - - - - - - - - - - -
 - 0 - - - - 0 0 - 0 - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -

P2427_Rose | $5700 | [5A] [3I] [11B] [2D] | A:1
P5031_Nate | $5100 | [8I] [2C] [1F] [11D] [8F] | A:4

P2427_Rose [Choose Hotel: C F I L T W]
`;

exports[`Game Play > (19) Player 2427_Rose starts Festival 1`] = `
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - A - - - - - - - -
 - - - A - - - - 0 - - -
 - - - - - - - - - - - -
 - 0 - - - - F F - 0 - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -

P2427_Rose | $5700 | [5A] [3I] [11B] [2D] | A:1 F:1
P5031_Nate | $5100 | [8I] [2C] [1F] [11D] [8F] | A:4

P2427_Rose [Choose Shares: A F] [End Turn]
`;

exports[`Game Play > (20) Player 2427_Rose purchases Festival 1`] = `
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - A - - - - - - - -
 - - - A - - - - 0 - - -
 - - - - - - - - - - - -
 - 0 - - - - F F - 0 - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -

P2427_Rose | $5400 | [5A] [3I] [11B] [2D] | A:1 F:2
P5031_Nate | $5100 | [8I] [2C] [1F] [11D] [8F] | A:4

P2427_Rose [Choose Shares: A F] [End Turn]
`;

exports[`Game Play > (21) Player 2427_Rose purchases Festival 1`] = `
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - A - - - - - - - -
 - - - A - - - - 0 - - -
 - - - - - - - - - - - -
 - 0 - - - - F F - 0 - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -

P2427_Rose | $5100 | [5A] [3I] [11B] [2D] | A:1 F:3
P5031_Nate | $5100 | [8I] [2C] [1F] [11D] [8F] | A:4

P2427_Rose [Choose Shares: A F] [End Turn]
`;

exports[`Game Play > (22) Player 2427_Rose purchases Festival 1`] = `
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - A - - - - - - - -
 - - - A - - - - 0 - - -
 - - - - - - - - - - - -
 - 0 - - - - F F - 0 - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -

P2427_Rose | $4800 | [5A] [3I] [11B] [2D] | A:1 F:4
P5031_Nate | $5100 | [8I] [2C] [1F] [11D] [8F] | A:4

P2427_Rose [End Turn]
`;

exports[`Game Play > (23) Player 2427_Rose ends turn 1`] = `
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - A - - - - - - - -
 - - - A - - - - 0 - - -
 - - - - - - - - - - - -
 - 0 - - - - F F - 0 - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -

P2427_Rose | $4800 | [5A] [3I] [11B] [2D] [11F] | A:1 F:4
P5031_Nate | $5100 | [8I] [2C] [1F] [11D] [8F] | A:4

P5031_Nate [Choose Tile: [8I] [2C] [1F] [11D] [8F]]
`;

exports[`Game Play > (24) Player 5031_Nate places tile [11D] 1`] = `
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - A - - - - - - 0 -
 - - - A - - - - 0 - - -
 - - - - - - - - - - - -
 - 0 - - - - F F - 0 - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -

P2427_Rose | $4800 | [5A] [3I] [11B] [2D] [11F] | A:1 F:4
P5031_Nate | $5100 | [8I] [2C] [1F] [8F] | A:4

P5031_Nate [Choose Shares: A F] [End Turn]
`;

exports[`Game Play > (25) Player 5031_Nate purchases Festival 1`] = `
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - A - - - - - - 0 -
 - - - A - - - - 0 - - -
 - - - - - - - - - - - -
 - 0 - - - - F F - 0 - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -

P2427_Rose | $4800 | [5A] [3I] [11B] [2D] [11F] | A:1 F:4
P5031_Nate | $4800 | [8I] [2C] [1F] [8F] | A:4 F:1

P5031_Nate [Choose Shares: A F] [End Turn]
`;

exports[`Game Play > (26) Player 5031_Nate purchases Festival 1`] = `
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - A - - - - - - 0 -
 - - - A - - - - 0 - - -
 - - - - - - - - - - - -
 - 0 - - - - F F - 0 - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -

P2427_Rose | $4800 | [5A] [3I] [11B] [2D] [11F] | A:1 F:4
P5031_Nate | $4500 | [8I] [2C] [1F] [8F] | A:4 F:2

P5031_Nate [Choose Shares: A F] [End Turn]
`;

exports[`Game Play > (27) Player 5031_Nate ends turn 1`] = `
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - A - - - - - - 0 -
 - - - A - - - - 0 - - -
 - - - - - - - - - - - -
 - 0 - - - - F F - 0 - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -

P2427_Rose | $4800 | [5A] [3I] [11B] [2D] [11F] | A:1 F:4
P5031_Nate | $4500 | [8I] [2C] [1F] [8F] [5B] | A:4 F:2

P2427_Rose [Choose Tile: [5A] [3I] [11B] [2D] [11F]]
`;

exports[`Game Play > (28) Player 2427_Rose places tile [11F] 1`] = `
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - A - - - - - - 0 -
 - - - A - - - - 0 - - -
 - - - - - - - - - - 0 -
 - 0 - - - - F F - 0 - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -

P2427_Rose | $4800 | [5A] [3I] [11B] [2D] | A:1 F:4
P5031_Nate | $4500 | [8I] [2C] [1F] [8F] [5B] | A:4 F:2

P2427_Rose [Choose Shares: A F] [End Turn]
`;

exports[`Game Play > (29) Player 2427_Rose purchases Festival 1`] = `
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - A - - - - - - 0 -
 - - - A - - - - 0 - - -
 - - - - - - - - - - 0 -
 - 0 - - - - F F - 0 - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -

P2427_Rose | $4500 | [5A] [3I] [11B] [2D] | A:1 F:5
P5031_Nate | $4500 | [8I] [2C] [1F] [8F] [5B] | A:4 F:2

P2427_Rose [Choose Shares: A F] [End Turn]
`;

exports[`Game Play > (30) Player 2427_Rose purchases American 1`] = `
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - A - - - - - - 0 -
 - - - A - - - - 0 - - -
 - - - - - - - - - - 0 -
 - 0 - - - - F F - 0 - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -

P2427_Rose | $4200 | [5A] [3I] [11B] [2D] | A:2 F:5
P5031_Nate | $4500 | [8I] [2C] [1F] [8F] [5B] | A:4 F:2

P2427_Rose [Choose Shares: A F] [End Turn]
`;

exports[`Game Play > (31) Player 2427_Rose ends turn 1`] = `
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - A - - - - - - 0 -
 - - - A - - - - 0 - - -
 - - - - - - - - - - 0 -
 - 0 - - - - F F - 0 - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -

P2427_Rose | $4200 | [5A] [3I] [11B] [2D] [10C] | A:2 F:5
P5031_Nate | $4500 | [8I] [2C] [1F] [8F] [5B] | A:4 F:2

P5031_Nate [Choose Tile: [8I] [2C] [1F] [8F] [5B]]
`;

exports[`Game Play > (32) Player 5031_Nate places tile [5B] 1`] = `
 - - - - - - - - - - - -
 - - - - 0 - - - - - - -
 - - - - - - - - - - - -
 - - - A - - - - - - 0 -
 - - - A - - - - 0 - - -
 - - - - - - - - - - 0 -
 - 0 - - - - F F - 0 - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -

P2427_Rose | $4200 | [5A] [3I] [11B] [2D] [10C] | A:2 F:5
P5031_Nate | $4500 | [8I] [2C] [1F] [8F] | A:4 F:2

P5031_Nate [Choose Shares: A F] [End Turn]
`;

exports[`Game Play > (33) Player 5031_Nate ends turn 1`] = `
 - - - - - - - - - - - -
 - - - - 0 - - - - - - -
 - - - - - - - - - - - -
 - - - A - - - - - - 0 -
 - - - A - - - - 0 - - -
 - - - - - - - - - - 0 -
 - 0 - - - - F F - 0 - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -

P2427_Rose | $4200 | [5A] [3I] [11B] [2D] [10C] | A:2 F:5
P5031_Nate | $4500 | [8I] [2C] [1F] [8F] [3H] | A:4 F:2

P2427_Rose [Choose Tile: [5A] [3I] [11B] [2D] [10C]]
`;

exports[`Game Play > (34) Player 2427_Rose places tile [5A] 1`] = `
 - - - - 0 - - - - - - -
 - - - - 0 - - - - - - -
 - - - - - - - - - - - -
 - - - A - - - - - - 0 -
 - - - A - - - - 0 - - -
 - - - - - - - - - - 0 -
 - 0 - - - - F F - 0 - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -

P2427_Rose | $4200 | [3I] [11B] [2D] [10C] | A:2 F:5
P5031_Nate | $4500 | [8I] [2C] [1F] [8F] [3H] | A:4 F:2

P2427_Rose [Choose Hotel: C I L T W]
`;

exports[`Game Play > (35) Player 2427_Rose starts Continental 1`] = `
 - - - - C - - - - - - -
 - - - - C - - - - - - -
 - - - - - - - - - - - -
 - - - A - - - - - - 0 -
 - - - A - - - - 0 - - -
 - - - - - - - - - - 0 -
 - 0 - - - - F F - 0 - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -

P2427_Rose | $4200 | [3I] [11B] [2D] [10C] | A:2 C:1 F:5
P5031_Nate | $4500 | [8I] [2C] [1F] [8F] [3H] | A:4 F:2

P2427_Rose [Choose Shares: C A F] [End Turn]
`;

exports[`Game Play > (36) Player 2427_Rose purchases Continental 1`] = `
 - - - - C - - - - - - -
 - - - - C - - - - - - -
 - - - - - - - - - - - -
 - - - A - - - - - - 0 -
 - - - A - - - - 0 - - -
 - - - - - - - - - - 0 -
 - 0 - - - - F F - 0 - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -

P2427_Rose | $3800 | [3I] [11B] [2D] [10C] | A:2 C:2 F:5
P5031_Nate | $4500 | [8I] [2C] [1F] [8F] [3H] | A:4 F:2

P2427_Rose [Choose Shares: C A F] [End Turn]
`;

exports[`Game Play > (37) Player 2427_Rose purchases Continental 1`] = `
 - - - - C - - - - - - -
 - - - - C - - - - - - -
 - - - - - - - - - - - -
 - - - A - - - - - - 0 -
 - - - A - - - - 0 - - -
 - - - - - - - - - - 0 -
 - 0 - - - - F F - 0 - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -

P2427_Rose | $3400 | [3I] [11B] [2D] [10C] | A:2 C:3 F:5
P5031_Nate | $4500 | [8I] [2C] [1F] [8F] [3H] | A:4 F:2

P2427_Rose [Choose Shares: C A F] [End Turn]
`;

exports[`Game Play > (38) Player 2427_Rose ends turn 1`] = `
 - - - - C - - - - - - -
 - - - - C - - - - - - -
 - - - - - - - - - - - -
 - - - A - - - - - - 0 -
 - - - A - - - - 0 - - -
 - - - - - - - - - - 0 -
 - 0 - - - - F F - 0 - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -

P2427_Rose | $3400 | [3I] [11B] [2D] [10C] [4G] | A:2 C:3 F:5
P5031_Nate | $4500 | [8I] [2C] [1F] [8F] [3H] | A:4 F:2

P5031_Nate [Choose Tile: [8I] [2C] [1F] [8F] [3H]]
`;

exports[`Game Play > (39) Player 5031_Nate places tile [3H] 1`] = `
 - - - - C - - - - - - -
 - - - - C - - - - - - -
 - - - - - - - - - - - -
 - - - A - - - - - - 0 -
 - - - A - - - - 0 - - -
 - - - - - - - - - - 0 -
 - 0 - - - - F F - 0 - -
 - - 0 - - - - - - - - -
 - - - - - - - - - - - -

P2427_Rose | $3400 | [3I] [11B] [2D] [10C] [4G] | A:2 C:3 F:5
P5031_Nate | $4500 | [8I] [2C] [1F] [8F] | A:4 F:2

P5031_Nate [Choose Shares: C A F] [End Turn]
`;

exports[`Game Play > (40) Player 5031_Nate purchases Continental 1`] = `
 - - - - C - - - - - - -
 - - - - C - - - - - - -
 - - - - - - - - - - - -
 - - - A - - - - - - 0 -
 - - - A - - - - 0 - - -
 - - - - - - - - - - 0 -
 - 0 - - - - F F - 0 - -
 - - 0 - - - - - - - - -
 - - - - - - - - - - - -

P2427_Rose | $3400 | [3I] [11B] [2D] [10C] [4G] | A:2 C:3 F:5
P5031_Nate | $4100 | [8I] [2C] [1F] [8F] | A:4 C:1 F:2

P5031_Nate [Choose Shares: C A F] [End Turn]
`;

exports[`Game Play > (41) Player 5031_Nate ends turn 1`] = `
 - - - - C - - - - - - -
 - - - - C - - - - - - -
 - - - - - - - - - - - -
 - - - A - - - - - - 0 -
 - - - A - - - - 0 - - -
 - - - - - - - - - - 0 -
 - 0 - - - - F F - 0 - -
 - - 0 - - - - - - - - -
 - - - - - - - - - - - -

P2427_Rose | $3400 | [3I] [11B] [2D] [10C] [4G] | A:2 C:3 F:5
P5031_Nate | $4100 | [8I] [2C] [1F] [8F] [9G] | A:4 C:1 F:2

P2427_Rose [Choose Tile: [3I] [11B] [2D] [10C] [4G]]
`;

exports[`Game Play > (42) Player 2427_Rose places tile [3I] 1`] = `
 - - - - C - - - - - - -
 - - - - C - - - - - - -
 - - - - - - - - - - - -
 - - - A - - - - - - 0 -
 - - - A - - - - 0 - - -
 - - - - - - - - - - 0 -
 - 0 - - - - F F - 0 - -
 - - 0 - - - - - - - - -
 - - 0 - - - - - - - - -

P2427_Rose | $3400 | [11B] [2D] [10C] [4G] | A:2 C:3 F:5
P5031_Nate | $4100 | [8I] [2C] [1F] [8F] [9G] | A:4 C:1 F:2

P2427_Rose [Choose Hotel: I L T W]
`;

exports[`Game Play > (43) Player 2427_Rose starts Luxor 1`] = `
 - - - - C - - - - - - -
 - - - - C - - - - - - -
 - - - - - - - - - - - -
 - - - A - - - - - - 0 -
 - - - A - - - - 0 - - -
 - - - - - - - - - - 0 -
 - 0 - - - - F F - 0 - -
 - - L - - - - - - - - -
 - - L - - - - - - - - -

P2427_Rose | $3400 | [11B] [2D] [10C] [4G] | A:2 C:3 F:5 L:1
P5031_Nate | $4100 | [8I] [2C] [1F] [8F] [9G] | A:4 C:1 F:2

P2427_Rose [Choose Shares: C A F L] [End Turn]
`;

exports[`Game Play > (44) Player 2427_Rose purchases Luxor 1`] = `
 - - - - C - - - - - - -
 - - - - C - - - - - - -
 - - - - - - - - - - - -
 - - - A - - - - - - 0 -
 - - - A - - - - 0 - - -
 - - - - - - - - - - 0 -
 - 0 - - - - F F - 0 - -
 - - L - - - - - - - - -
 - - L - - - - - - - - -

P2427_Rose | $3200 | [11B] [2D] [10C] [4G] | A:2 C:3 F:5 L:2
P5031_Nate | $4100 | [8I] [2C] [1F] [8F] [9G] | A:4 C:1 F:2

P2427_Rose [Choose Shares: C A F L] [End Turn]
`;

exports[`Game Play > (45) Player 2427_Rose purchases Festival 1`] = `
 - - - - C - - - - - - -
 - - - - C - - - - - - -
 - - - - - - - - - - - -
 - - - A - - - - - - 0 -
 - - - A - - - - 0 - - -
 - - - - - - - - - - 0 -
 - 0 - - - - F F - 0 - -
 - - L - - - - - - - - -
 - - L - - - - - - - - -

P2427_Rose | $2900 | [11B] [2D] [10C] [4G] | A:2 C:3 F:6 L:2
P5031_Nate | $4100 | [8I] [2C] [1F] [8F] [9G] | A:4 C:1 F:2

P2427_Rose [Choose Shares: C A F L] [End Turn]
`;

exports[`Game Play > (46) Player 2427_Rose purchases American 1`] = `
 - - - - C - - - - - - -
 - - - - C - - - - - - -
 - - - - - - - - - - - -
 - - - A - - - - - - 0 -
 - - - A - - - - 0 - - -
 - - - - - - - - - - 0 -
 - 0 - - - - F F - 0 - -
 - - L - - - - - - - - -
 - - L - - - - - - - - -

P2427_Rose | $2600 | [11B] [2D] [10C] [4G] | A:3 C:3 F:6 L:2
P5031_Nate | $4100 | [8I] [2C] [1F] [8F] [9G] | A:4 C:1 F:2

P2427_Rose [End Turn]
`;

exports[`Game Play > (47) Player 2427_Rose ends turn 1`] = `
 - - - - C - - - - - - -
 - - - - C - - - - - - -
 - - - - - - - - - - - -
 - - - A - - - - - - 0 -
 - - - A - - - - 0 - - -
 - - - - - - - - - - 0 -
 - 0 - - - - F F - 0 - -
 - - L - - - - - - - - -
 - - L - - - - - - - - -

P2427_Rose | $2600 | [11B] [2D] [10C] [4G] [11E] | A:3 C:3 F:6 L:2
P5031_Nate | $4100 | [8I] [2C] [1F] [8F] [9G] | A:4 C:1 F:2

P5031_Nate [Choose Tile: [8I] [2C] [1F] [8F] [9G]]
`;

exports[`Game Play > (48) Player 5031_Nate places tile [2C] 1`] = `
 - - - - C - - - - - - -
 - - - - C - - - - - - -
 - 0 - - - - - - - - - -
 - - - A - - - - - - 0 -
 - - - A - - - - 0 - - -
 - - - - - - - - - - 0 -
 - 0 - - - - F F - 0 - -
 - - L - - - - - - - - -
 - - L - - - - - - - - -

P2427_Rose | $2600 | [11B] [2D] [10C] [4G] [11E] | A:3 C:3 F:6 L:2
P5031_Nate | $4100 | [8I] [1F] [8F] [9G] | A:4 C:1 F:2

P5031_Nate [Choose Shares: C A F L] [End Turn]
`;

exports[`Game Play > (49) Player 5031_Nate purchases American 1`] = `
 - - - - C - - - - - - -
 - - - - C - - - - - - -
 - 0 - - - - - - - - - -
 - - - A - - - - - - 0 -
 - - - A - - - - 0 - - -
 - - - - - - - - - - 0 -
 - 0 - - - - F F - 0 - -
 - - L - - - - - - - - -
 - - L - - - - - - - - -

P2427_Rose | $2600 | [11B] [2D] [10C] [4G] [11E] | A:3 C:3 F:6 L:2
P5031_Nate | $3800 | [8I] [1F] [8F] [9G] | A:5 C:1 F:2

P5031_Nate [Choose Shares: C A F L] [End Turn]
`;

exports[`Game Play > (50) Player 5031_Nate purchases American 1`] = `
 - - - - C - - - - - - -
 - - - - C - - - - - - -
 - 0 - - - - - - - - - -
 - - - A - - - - - - 0 -
 - - - A - - - - 0 - - -
 - - - - - - - - - - 0 -
 - 0 - - - - F F - 0 - -
 - - L - - - - - - - - -
 - - L - - - - - - - - -

P2427_Rose | $2600 | [11B] [2D] [10C] [4G] [11E] | A:3 C:3 F:6 L:2
P5031_Nate | $3500 | [8I] [1F] [8F] [9G] | A:6 C:1 F:2

P5031_Nate [Choose Shares: C A F L] [End Turn]
`;

exports[`Game Play > (51) Player 5031_Nate purchases American 1`] = `
 - - - - C - - - - - - -
 - - - - C - - - - - - -
 - 0 - - - - - - - - - -
 - - - A - - - - - - 0 -
 - - - A - - - - 0 - - -
 - - - - - - - - - - 0 -
 - 0 - - - - F F - 0 - -
 - - L - - - - - - - - -
 - - L - - - - - - - - -

P2427_Rose | $2600 | [11B] [2D] [10C] [4G] [11E] | A:3 C:3 F:6 L:2
P5031_Nate | $3200 | [8I] [1F] [8F] [9G] | A:7 C:1 F:2

P5031_Nate [End Turn]
`;

exports[`Game Play > (52) Player 5031_Nate ends turn 1`] = `
 - - - - C - - - - - - -
 - - - - C - - - - - - -
 - 0 - - - - - - - - - -
 - - - A - - - - - - 0 -
 - - - A - - - - 0 - - -
 - - - - - - - - - - 0 -
 - 0 - - - - F F - 0 - -
 - - L - - - - - - - - -
 - - L - - - - - - - - -

P2427_Rose | $2600 | [11B] [2D] [10C] [4G] [11E] | A:3 C:3 F:6 L:2
P5031_Nate | $3200 | [8I] [1F] [8F] [9G] [10I] | A:7 C:1 F:2

P2427_Rose [Choose Tile: [11B] [2D] [10C] [4G] [11E]]
`;

exports[`Game Play > (53) Player 2427_Rose places tile [2D] 1`] = `
 - - - - C - - - - - - -
 - - - - C - - - - - - -
 - 0 - - - - - - - - - -
 - 0 - A - - - - - - 0 -
 - - - A - - - - 0 - - -
 - - - - - - - - - - 0 -
 - 0 - - - - F F - 0 - -
 - - L - - - - - - - - -
 - - L - - - - - - - - -

P2427_Rose | $2600 | [11B] [10C] [4G] [11E] | A:3 C:3 F:6 L:2
P5031_Nate | $3200 | [8I] [1F] [8F] [9G] [10I] | A:7 C:1 F:2

P2427_Rose [Choose Hotel: I T W]
`;

exports[`Game Play > (54) Player 2427_Rose starts Imperial 1`] = `
 - - - - C - - - - - - -
 - - - - C - - - - - - -
 - I - - - - - - - - - -
 - I - A - - - - - - 0 -
 - - - A - - - - 0 - - -
 - - - - - - - - - - 0 -
 - 0 - - - - F F - 0 - -
 - - L - - - - - - - - -
 - - L - - - - - - - - -

P2427_Rose | $2600 | [11B] [10C] [4G] [11E] | A:3 C:3 F:6 I:1 L:2
P5031_Nate | $3200 | [8I] [1F] [8F] [9G] [10I] | A:7 C:1 F:2

P2427_Rose [Choose Shares: C I A F L] [End Turn]
`;

exports[`Game Play > (55) Player 2427_Rose purchases Imperial 1`] = `
 - - - - C - - - - - - -
 - - - - C - - - - - - -
 - I - - - - - - - - - -
 - I - A - - - - - - 0 -
 - - - A - - - - 0 - - -
 - - - - - - - - - - 0 -
 - 0 - - - - F F - 0 - -
 - - L - - - - - - - - -
 - - L - - - - - - - - -

P2427_Rose | $2200 | [11B] [10C] [4G] [11E] | A:3 C:3 F:6 I:2 L:2
P5031_Nate | $3200 | [8I] [1F] [8F] [9G] [10I] | A:7 C:1 F:2

P2427_Rose [Choose Shares: C I A F L] [End Turn]
`;

exports[`Game Play > (56) Player 2427_Rose purchases Imperial 1`] = `
 - - - - C - - - - - - -
 - - - - C - - - - - - -
 - I - - - - - - - - - -
 - I - A - - - - - - 0 -
 - - - A - - - - 0 - - -
 - - - - - - - - - - 0 -
 - 0 - - - - F F - 0 - -
 - - L - - - - - - - - -
 - - L - - - - - - - - -

P2427_Rose | $1800 | [11B] [10C] [4G] [11E] | A:3 C:3 F:6 I:3 L:2
P5031_Nate | $3200 | [8I] [1F] [8F] [9G] [10I] | A:7 C:1 F:2

P2427_Rose [Choose Shares: C I A F L] [End Turn]
`;

exports[`Game Play > (57) Player 2427_Rose purchases Imperial 1`] = `
 - - - - C - - - - - - -
 - - - - C - - - - - - -
 - I - - - - - - - - - -
 - I - A - - - - - - 0 -
 - - - A - - - - 0 - - -
 - - - - - - - - - - 0 -
 - 0 - - - - F F - 0 - -
 - - L - - - - - - - - -
 - - L - - - - - - - - -

P2427_Rose | $1400 | [11B] [10C] [4G] [11E] | A:3 C:3 F:6 I:4 L:2
P5031_Nate | $3200 | [8I] [1F] [8F] [9G] [10I] | A:7 C:1 F:2

P2427_Rose [End Turn]
`;

exports[`Game Play > (58) Player 2427_Rose ends turn 1`] = `
 - - - - C - - - - - - -
 - - - - C - - - - - - -
 - I - - - - - - - - - -
 - I - A - - - - - - 0 -
 - - - A - - - - 0 - - -
 - - - - - - - - - - 0 -
 - 0 - - - - F F - 0 - -
 - - L - - - - - - - - -
 - - L - - - - - - - - -

P2427_Rose | $1400 | [11B] [10C] [4G] [11E] [5H] | A:3 C:3 F:6 I:4 L:2
P5031_Nate | $3200 | [8I] [1F] [8F] [9G] [10I] | A:7 C:1 F:2

P5031_Nate [Choose Tile: [8I] [1F] [8F] [9G] [10I]]
`;

exports[`Game Play > (59) Player 5031_Nate places tile [10I] 1`] = `
 - - - - C - - - - - - -
 - - - - C - - - - - - -
 - I - - - - - - - - - -
 - I - A - - - - - - 0 -
 - - - A - - - - 0 - - -
 - - - - - - - - - - 0 -
 - 0 - - - - F F - 0 - -
 - - L - - - - - - - - -
 - - L - - - - - - 0 - -

P2427_Rose | $1400 | [11B] [10C] [4G] [11E] [5H] | A:3 C:3 F:6 I:4 L:2
P5031_Nate | $3200 | [8I] [1F] [8F] [9G] | A:7 C:1 F:2

P5031_Nate [Choose Shares: C I A F L] [End Turn]
`;

exports[`Game Play > (60) Player 5031_Nate purchases Luxor 1`] = `
 - - - - C - - - - - - -
 - - - - C - - - - - - -
 - I - - - - - - - - - -
 - I - A - - - - - - 0 -
 - - - A - - - - 0 - - -
 - - - - - - - - - - 0 -
 - 0 - - - - F F - 0 - -
 - - L - - - - - - - - -
 - - L - - - - - - 0 - -

P2427_Rose | $1400 | [11B] [10C] [4G] [11E] [5H] | A:3 C:3 F:6 I:4 L:2
P5031_Nate | $3000 | [8I] [1F] [8F] [9G] | A:7 C:1 F:2 L:1

P5031_Nate [Choose Shares: C I A F L] [End Turn]
`;

exports[`Game Play > (61) Player 5031_Nate purchases Imperial 1`] = `
 - - - - C - - - - - - -
 - - - - C - - - - - - -
 - I - - - - - - - - - -
 - I - A - - - - - - 0 -
 - - - A - - - - 0 - - -
 - - - - - - - - - - 0 -
 - 0 - - - - F F - 0 - -
 - - L - - - - - - - - -
 - - L - - - - - - 0 - -

P2427_Rose | $1400 | [11B] [10C] [4G] [11E] [5H] | A:3 C:3 F:6 I:4 L:2
P5031_Nate | $2600 | [8I] [1F] [8F] [9G] | A:7 C:1 F:2 I:1 L:1

P5031_Nate [Choose Shares: C I A F L] [End Turn]
`;

exports[`Game Play > (62) Player 5031_Nate purchases Imperial 1`] = `
 - - - - C - - - - - - -
 - - - - C - - - - - - -
 - I - - - - - - - - - -
 - I - A - - - - - - 0 -
 - - - A - - - - 0 - - -
 - - - - - - - - - - 0 -
 - 0 - - - - F F - 0 - -
 - - L - - - - - - - - -
 - - L - - - - - - 0 - -

P2427_Rose | $1400 | [11B] [10C] [4G] [11E] [5H] | A:3 C:3 F:6 I:4 L:2
P5031_Nate | $2200 | [8I] [1F] [8F] [9G] | A:7 C:1 F:2 I:2 L:1

P5031_Nate [End Turn]
`;

exports[`Game Play > (63) Player 5031_Nate ends turn 1`] = `
 - - - - C - - - - - - -
 - - - - C - - - - - - -
 - I - - - - - - - - - -
 - I - A - - - - - - 0 -
 - - - A - - - - 0 - - -
 - - - - - - - - - - 0 -
 - 0 - - - - F F - 0 - -
 - - L - - - - - - - - -
 - - L - - - - - - 0 - -

P2427_Rose | $1400 | [11B] [10C] [4G] [11E] [5H] | A:3 C:3 F:6 I:4 L:2
P5031_Nate | $2200 | [8I] [1F] [8F] [9G] [10B] | A:7 C:1 F:2 I:2 L:1

P2427_Rose [Choose Tile: [11B] [10C] [4G] [11E] [5H]]
`;

exports[`Game Play > (64) Player 2427_Rose places tile [11E] 1`] = `
 - - - - C - - - - - - -
 - - - - C - - - - - - -
 - I - - - - - - - - - -
 - I - A - - - - - - 0 -
 - - - A - - - - 0 - 0 -
 - - - - - - - - - - 0 -
 - 0 - - - - F F - 0 - -
 - - L - - - - - - - - -
 - - L - - - - - - 0 - -

P2427_Rose | $1400 | [11B] [10C] [4G] [5H] | A:3 C:3 F:6 I:4 L:2
P5031_Nate | $2200 | [8I] [1F] [8F] [9G] [10B] | A:7 C:1 F:2 I:2 L:1

P2427_Rose [Choose Hotel: T W]
`;

exports[`Game Play > (65) Player 2427_Rose starts Worldwide 1`] = `
 - - - - C - - - - - - -
 - - - - C - - - - - - -
 - I - - - - - - - - - -
 - I - A - - - - - - W -
 - - - A - - - - 0 - W -
 - - - - - - - - - - W -
 - 0 - - - - F F - 0 - -
 - - L - - - - - - - - -
 - - L - - - - - - 0 - -

P2427_Rose | $1400 | [11B] [10C] [4G] [5H] | A:3 C:3 F:6 I:4 L:2 W:1
P5031_Nate | $2200 | [8I] [1F] [8F] [9G] [10B] | A:7 C:1 F:2 I:2 L:1

P2427_Rose [Choose Shares: C I A W F L] [End Turn]
`;

exports[`Game Play > (66) Player 2427_Rose purchases Continental 1`] = `
 - - - - C - - - - - - -
 - - - - C - - - - - - -
 - I - - - - - - - - - -
 - I - A - - - - - - W -
 - - - A - - - - 0 - W -
 - - - - - - - - - - W -
 - 0 - - - - F F - 0 - -
 - - L - - - - - - - - -
 - - L - - - - - - 0 - -

P2427_Rose | $1000 | [11B] [10C] [4G] [5H] | A:3 C:4 F:6 I:4 L:2 W:1
P5031_Nate | $2200 | [8I] [1F] [8F] [9G] [10B] | A:7 C:1 F:2 I:2 L:1

P2427_Rose [Choose Shares: C I A W F L] [End Turn]
`;

exports[`Game Play > (67) Player 2427_Rose purchases Imperial 1`] = `
 - - - - C - - - - - - -
 - - - - C - - - - - - -
 - I - - - - - - - - - -
 - I - A - - - - - - W -
 - - - A - - - - 0 - W -
 - - - - - - - - - - W -
 - 0 - - - - F F - 0 - -
 - - L - - - - - - - - -
 - - L - - - - - - 0 - -

P2427_Rose | $600 | [11B] [10C] [4G] [5H] | A:3 C:4 F:6 I:5 L:2 W:1
P5031_Nate | $2200 | [8I] [1F] [8F] [9G] [10B] | A:7 C:1 F:2 I:2 L:1

P2427_Rose [Choose Shares: C I A W F L] [End Turn]
`;

exports[`Game Play > (68) Player 2427_Rose ends turn 1`] = `
 - - - - C - - - - - - -
 - - - - C - - - - - - -
 - I - - - - - - - - - -
 - I - A - - - - - - W -
 - - - A - - - - 0 - W -
 - - - - - - - - - - W -
 - 0 - - - - F F - 0 - -
 - - L - - - - - - - - -
 - - L - - - - - - 0 - -

P2427_Rose | $600 | [11B] [10C] [4G] [5H] [2H] | A:3 C:4 F:6 I:5 L:2 W:1
P5031_Nate | $2200 | [8I] [1F] [8F] [9G] [10B] | A:7 C:1 F:2 I:2 L:1

P5031_Nate [Choose Tile: [8I] [1F] [8F] [9G] [10B]]
`;

exports[`Game Play > (69) Player 5031_Nate places tile [10B] 1`] = `
 - - - - C - - - - - - -
 - - - - C - - - - 0 - -
 - I - - - - - - - - - -
 - I - A - - - - - - W -
 - - - A - - - - 0 - W -
 - - - - - - - - - - W -
 - 0 - - - - F F - 0 - -
 - - L - - - - - - - - -
 - - L - - - - - - 0 - -

P2427_Rose | $600 | [11B] [10C] [4G] [5H] [2H] | A:3 C:4 F:6 I:5 L:2 W:1
P5031_Nate | $2200 | [8I] [1F] [8F] [9G] | A:7 C:1 F:2 I:2 L:1

P5031_Nate [Choose Shares: C I A W F L] [End Turn]
`;

exports[`Game Play > (70) Player 5031_Nate ends turn 1`] = `
 - - - - C - - - - - - -
 - - - - C - - - - 0 - -
 - I - - - - - - - - - -
 - I - A - - - - - - W -
 - - - A - - - - 0 - W -
 - - - - - - - - - - W -
 - 0 - - - - F F - 0 - -
 - - L - - - - - - - - -
 - - L - - - - - - 0 - -

P2427_Rose | $600 | [11B] [10C] [4G] [5H] [2H] | A:3 C:4 F:6 I:5 L:2 W:1
P5031_Nate | $2200 | [8I] [1F] [8F] [9G] [8C] | A:7 C:1 F:2 I:2 L:1

P2427_Rose [Choose Tile: [11B] [10C] [4G] [5H] [2H]]
`;

exports[`Game Play > (71) Player 2427_Rose places tile [4G] 1`] = `
 - - - - C - - - - - - -
 - - - - C - - - - 0 - -
 - I - - - - - - - - - -
 - I - A - - - - - - W -
 - - - A - - - - 0 - W -
 - - - - - - - - - - W -
 - 0 - 0 - - F F - 0 - -
 - - L - - - - - - - - -
 - - L - - - - - - 0 - -

P2427_Rose | $600 | [11B] [10C] [5H] [2H] | A:3 C:4 F:6 I:5 L:2 W:1
P5031_Nate | $2200 | [8I] [1F] [8F] [9G] [8C] | A:7 C:1 F:2 I:2 L:1

P2427_Rose [Choose Shares: C I A W F L] [End Turn]
`;

exports[`Game Play > (72) Player 2427_Rose ends turn 1`] = `
 - - - - C - - - - - - -
 - - - - C - - - - 0 - -
 - I - - - - - - - - - -
 - I - A - - - - - - W -
 - - - A - - - - 0 - W -
 - - - - - - - - - - W -
 - 0 - 0 - - F F - 0 - -
 - - L - - - - - - - - -
 - - L - - - - - - 0 - -

P2427_Rose | $600 | [11B] [10C] [5H] [2H] [12A] | A:3 C:4 F:6 I:5 L:2 W:1
P5031_Nate | $2200 | [8I] [1F] [8F] [9G] [8C] | A:7 C:1 F:2 I:2 L:1

P5031_Nate [Choose Tile: [8I] [1F] [8F] [9G] [8C]]
`;

exports[`Game Play > (73) Player 5031_Nate places tile [8C] 1`] = `
 - - - - C - - - - - - -
 - - - - C - - - - 0 - -
 - I - - - - - 0 - - - -
 - I - A - - - - - - W -
 - - - A - - - - 0 - W -
 - - - - - - - - - - W -
 - 0 - 0 - - F F - 0 - -
 - - L - - - - - - - - -
 - - L - - - - - - 0 - -

P2427_Rose | $600 | [11B] [10C] [5H] [2H] [12A] | A:3 C:4 F:6 I:5 L:2 W:1
P5031_Nate | $2200 | [8I] [1F] [8F] [9G] | A:7 C:1 F:2 I:2 L:1

P5031_Nate [Choose Shares: C I A W F L] [End Turn]
`;

exports[`Game Play > (74) Player 5031_Nate ends turn 1`] = `
 - - - - C - - - - - - -
 - - - - C - - - - 0 - -
 - I - - - - - 0 - - - -
 - I - A - - - - - - W -
 - - - A - - - - 0 - W -
 - - - - - - - - - - W -
 - 0 - 0 - - F F - 0 - -
 - - L - - - - - - - - -
 - - L - - - - - - 0 - -

P2427_Rose | $600 | [11B] [10C] [5H] [2H] [12A] | A:3 C:4 F:6 I:5 L:2 W:1
P5031_Nate | $2200 | [8I] [1F] [8F] [9G] [4B] | A:7 C:1 F:2 I:2 L:1

P2427_Rose [Choose Tile: [11B] [10C] [5H] [2H] [12A]]
`;

exports[`Game Play > (75) Player 2427_Rose places tile [11B] 1`] = `
 - - - - C - - - - - - -
 - - - - C - - - - 0 0 -
 - I - - - - - 0 - - - -
 - I - A - - - - - - W -
 - - - A - - - - 0 - W -
 - - - - - - - - - - W -
 - 0 - 0 - - F F - 0 - -
 - - L - - - - - - - - -
 - - L - - - - - - 0 - -

P2427_Rose | $600 | [10C] [5H] [2H] [12A] | A:3 C:4 F:6 I:5 L:2 W:1
P5031_Nate | $2200 | [8I] [1F] [8F] [9G] [4B] | A:7 C:1 F:2 I:2 L:1

P2427_Rose [Choose Hotel: T]
`;

exports[`Game Play > (76) Player 2427_Rose starts Tower 1`] = `
 - - - - C - - - - - - -
 - - - - C - - - - T T -
 - I - - - - - 0 - - - -
 - I - A - - - - - - W -
 - - - A - - - - 0 - W -
 - - - - - - - - - - W -
 - 0 - 0 - - F F - 0 - -
 - - L - - - - - - - - -
 - - L - - - - - - 0 - -

P2427_Rose | $600 | [10C] [5H] [2H] [12A] | A:3 C:4 F:6 I:5 L:2 T:1 W:1
P5031_Nate | $2200 | [8I] [1F] [8F] [9G] [4B] | A:7 C:1 F:2 I:2 L:1

P2427_Rose [Choose Shares: C T I A W F L] [End Turn]
`;

exports[`Game Play > (77) Player 2427_Rose ends turn 1`] = `
 - - - - C - - - - - - -
 - - - - C - - - - T T -
 - I - - - - - 0 - - - -
 - I - A - - - - - - W -
 - - - A - - - - 0 - W -
 - - - - - - - - - - W -
 - 0 - 0 - - F F - 0 - -
 - - L - - - - - - - - -
 - - L - - - - - - 0 - -

P2427_Rose | $600 | [10C] [5H] [2H] [12A] [11H] | A:3 C:4 F:6 I:5 L:2 T:1 W:1
P5031_Nate | $2200 | [8I] [1F] [8F] [9G] [4B] | A:7 C:1 F:2 I:2 L:1

P5031_Nate [Choose Tile: [8I] [1F] [8F] [9G] [4B]]
`;

exports[`Game Play > (78) Player 5031_Nate places tile [8I] 1`] = `
 - - - - C - - - - - - -
 - - - - C - - - - T T -
 - I - - - - - 0 - - - -
 - I - A - - - - - - W -
 - - - A - - - - 0 - W -
 - - - - - - - - - - W -
 - 0 - 0 - - F F - 0 - -
 - - L - - - - - - - - -
 - - L - - - - 0 - 0 - -

P2427_Rose | $600 | [10C] [5H] [2H] [12A] [11H] | A:3 C:4 F:6 I:5 L:2 T:1 W:1
P5031_Nate | $2200 | [1F] [8F] [9G] [4B] | A:7 C:1 F:2 I:2 L:1

P5031_Nate [Choose Shares: C T I A W F L] [End Turn]
`;

exports[`Game Play > (79) Player 5031_Nate ends turn 1`] = `
 - - - - C - - - - - - -
 - - - - C - - - - T T -
 - I - - - - - 0 - - - -
 - I - A - - - - - - W -
 - - - A - - - - 0 - W -
 - - - - - - - - - - W -
 - 0 - 0 - - F F - 0 - -
 - - L - - - - - - - - -
 - - L - - - - 0 - 0 - -

P2427_Rose | $600 | [10C] [5H] [2H] [12A] [11H] | A:3 C:4 F:6 I:5 L:2 T:1 W:1
P5031_Nate | $2200 | [1F] [8F] [9G] [4B] [6D] | A:7 C:1 F:2 I:2 L:1

P2427_Rose [Choose Tile: [10C] [5H] [2H] [12A] [11H]]
`;

exports[`Game Play > (80) Player 2427_Rose places tile [5H] 1`] = `
 - - - - C - - - - - - -
 - - - - C - - - - T T -
 - I - - - - - 0 - - - -
 - I - A - - - - - - W -
 - - - A - - - - 0 - W -
 - - - - - - - - - - W -
 - 0 - 0 - - F F - 0 - -
 - - L - 0 - - - - - - -
 - - L - - - - 0 - 0 - -

P2427_Rose | $600 | [10C] [2H] [12A] [11H] | A:3 C:4 F:6 I:5 L:2 T:1 W:1
P5031_Nate | $2200 | [1F] [8F] [9G] [4B] [6D] | A:7 C:1 F:2 I:2 L:1

P2427_Rose [Choose Shares: C T I A W F L] [End Turn]
`;

exports[`Game Play > (81) Player 2427_Rose ends turn 1`] = `
 - - - - C - - - - - - -
 - - - - C - - - - T T -
 - I - - - - - 0 - - - -
 - I - A - - - - - - W -
 - - - A - - - - 0 - W -
 - - - - - - - - - - W -
 - 0 - 0 - - F F - 0 - -
 - - L - 0 - - - - - - -
 - - L - - - - 0 - 0 - -

P2427_Rose | $600 | [10C] [2H] [12A] [11H] [7C] | A:3 C:4 F:6 I:5 L:2 T:1 W:1
P5031_Nate | $2200 | [1F] [8F] [9G] [4B] [6D] | A:7 C:1 F:2 I:2 L:1

P5031_Nate [Choose Tile: [1F] [8F] [9G] [4B] [6D]]
`;

exports[`Game Play > (82) Player 5031_Nate places tile [6D] 1`] = `
 - - - - C - - - - - - -
 - - - - C - - - - T T -
 - I - - - - - 0 - - - -
 - I - A - 0 - - - - W -
 - - - A - - - - 0 - W -
 - - - - - - - - - - W -
 - 0 - 0 - - F F - 0 - -
 - - L - 0 - - - - - - -
 - - L - - - - 0 - 0 - -

P2427_Rose | $600 | [10C] [2H] [12A] [11H] [7C] | A:3 C:4 F:6 I:5 L:2 T:1 W:1
P5031_Nate | $2200 | [1F] [8F] [9G] [4B] | A:7 C:1 F:2 I:2 L:1

P5031_Nate [Choose Shares: C T I A W F L] [End Turn]
`;

exports[`Game Play > (83) Player 5031_Nate ends turn 1`] = `
 - - - - C - - - - - - -
 - - - - C - - - - T T -
 - I - - - - - 0 - - - -
 - I - A - 0 - - - - W -
 - - - A - - - - 0 - W -
 - - - - - - - - - - W -
 - 0 - 0 - - F F - 0 - -
 - - L - 0 - - - - - - -
 - - L - - - - 0 - 0 - -

P2427_Rose | $600 | [10C] [2H] [12A] [11H] [7C] | A:3 C:4 F:6 I:5 L:2 T:1 W:1
P5031_Nate | $2200 | [1F] [8F] [9G] [4B] [12E] | A:7 C:1 F:2 I:2 L:1

P2427_Rose [Choose Tile: [10C] [2H] [12A] [11H] (unavailable: [7C])]
`;

exports[`Game Play > (84) Player 2427_Rose places tile [10C] 1`] = `
 - - - - C - - - - - - -
 - - - - C - - - - T T -
 - I - - - - - 0 - T - -
 - I - A - 0 - - - - W -
 - - - A - - - - 0 - W -
 - - - - - - - - - - W -
 - 0 - 0 - - F F - 0 - -
 - - L - 0 - - - - - - -
 - - L - - - - 0 - 0 - -

P2427_Rose | $600 | [2H] [12A] [11H] [7C] | A:3 C:4 F:6 I:5 L:2 T:1 W:1
P5031_Nate | $2200 | [1F] [8F] [9G] [4B] [12E] | A:7 C:1 F:2 I:2 L:1

P2427_Rose [Choose Shares: C T I A W F L] [End Turn]
`;

exports[`Game Play > (85) Player 2427_Rose ends turn 1`] = `
 - - - - C - - - - - - -
 - - - - C - - - - T T -
 - I - - - - - 0 - T - -
 - I - A - 0 - - - - W -
 - - - A - - - - 0 - W -
 - - - - - - - - - - W -
 - 0 - 0 - - F F - 0 - -
 - - L - 0 - - - - - - -
 - - L - - - - 0 - 0 - -

P2427_Rose | $600 | [2H] [12A] [11H] [7C] [8A] | A:3 C:4 F:6 I:5 L:2 T:1 W:1
P5031_Nate | $2200 | [1F] [8F] [9G] [4B] [12E] | A:7 C:1 F:2 I:2 L:1

P5031_Nate [Choose Tile: [1F] [8F] [9G] [4B] [12E]]
`;

exports[`Game Play > (86) Player 5031_Nate places tile [1F] 1`] = `
 - - - - C - - - - - - -
 - - - - C - - - - T T -
 - I - - - - - 0 - T - -
 - I - A - 0 - - - - W -
 - - - A - - - - 0 - W -
 0 - - - - - - - - - W -
 - 0 - 0 - - F F - 0 - -
 - - L - 0 - - - - - - -
 - - L - - - - 0 - 0 - -

P2427_Rose | $600 | [2H] [12A] [11H] [7C] [8A] | A:3 C:4 F:6 I:5 L:2 T:1 W:1
P5031_Nate | $2200 | [8F] [9G] [4B] [12E] | A:7 C:1 F:2 I:2 L:1

P5031_Nate [Choose Shares: C T I A W F L] [End Turn]
`;

exports[`Game Play > (87) Player 5031_Nate ends turn 1`] = `
 - - - - C - - - - - - -
 - - - - C - - - - T T -
 - I - - - - - 0 - T - -
 - I - A - 0 - - - - W -
 - - - A - - - - 0 - W -
 0 - - - - - - - - - W -
 - 0 - 0 - - F F - 0 - -
 - - L - 0 - - - - - - -
 - - L - - - - 0 - 0 - -

P2427_Rose | $600 | [2H] [12A] [11H] [7C] [8A] | A:3 C:4 F:6 I:5 L:2 T:1 W:1
P5031_Nate | $2200 | [8F] [9G] [4B] [12E] [5F] | A:7 C:1 F:2 I:2 L:1

P2427_Rose [Choose Tile: [2H] [12A] [11H] [8A] (unavailable: [7C])]
`;

exports[`Game Play > (88) Player 2427_Rose places tile [11H] 1`] = `
 - - - - C - - - - - - -
 - - - - C - - - - T T -
 - I - - - - - 0 - T - -
 - I - A - 0 - - - - W -
 - - - A - - - - 0 - W -
 0 - - - - - - - - - W -
 - 0 - 0 - - F F - 0 - -
 - - L - 0 - - - - - 0 -
 - - L - - - - 0 - 0 - -

P2427_Rose | $600 | [2H] [12A] [7C] [8A] | A:3 C:4 F:6 I:5 L:2 T:1 W:1
P5031_Nate | $2200 | [8F] [9G] [4B] [12E] [5F] | A:7 C:1 F:2 I:2 L:1

P2427_Rose [Choose Shares: C T I A W F L] [End Turn]
`;

exports[`Game Play > (89) Player 2427_Rose ends turn 1`] = `
 - - - - C - - - - - - -
 - - - - C - - - - T T -
 - I - - - - - 0 - T - -
 - I - A - 0 - - - - W -
 - - - A - - - - 0 - W -
 0 - - - - - - - - - W -
 - 0 - 0 - - F F - 0 - -
 - - L - 0 - - - - - 0 -
 - - L - - - - 0 - 0 - -

P2427_Rose | $600 | [2H] [12A] [7C] [8A] [4H] | A:3 C:4 F:6 I:5 L:2 T:1 W:1
P5031_Nate | $2200 | [8F] [9G] [4B] [12E] [5F] | A:7 C:1 F:2 I:2 L:1

P5031_Nate [Choose Tile: [8F] [9G] [4B] [12E] [5F]]
`;

exports[`Game Play > (90) Player 5031_Nate places tile [5F] 1`] = `
 - - - - C - - - - - - -
 - - - - C - - - - T T -
 - I - - - - - 0 - T - -
 - I - A - 0 - - - - W -
 - - - A - - - - 0 - W -
 0 - - - 0 - - - - - W -
 - 0 - 0 - - F F - 0 - -
 - - L - 0 - - - - - 0 -
 - - L - - - - 0 - 0 - -

P2427_Rose | $600 | [2H] [12A] [7C] [8A] [4H] | A:3 C:4 F:6 I:5 L:2 T:1 W:1
P5031_Nate | $2200 | [8F] [9G] [4B] [12E] | A:7 C:1 F:2 I:2 L:1

P5031_Nate [Choose Shares: C T I A W F L] [End Turn]
`;

exports[`Game Play > (91) Player 5031_Nate ends turn 1`] = `
 - - - - C - - - - - - -
 - - - - C - - - - T T -
 - I - - - - - 0 - T - -
 - I - A - 0 - - - - W -
 - - - A - - - - 0 - W -
 0 - - - 0 - - - - - W -
 - 0 - 0 - - F F - 0 - -
 - - L - 0 - - - - - 0 -
 - - L - - - - 0 - 0 - -

P2427_Rose | $600 | [2H] [12A] [7C] [8A] [4H] | A:3 C:4 F:6 I:5 L:2 T:1 W:1
P5031_Nate | $2200 | [8F] [9G] [4B] [12E] [5G] | A:7 C:1 F:2 I:2 L:1

P2427_Rose [Choose Tile: [2H] [12A] [8A] [4H] (unavailable: [7C])]
`;

exports[`Game Play > (92) Player 2427_Rose places tile [12A] 1`] = `
 - - - - C - - - - - - 0
 - - - - C - - - - T T -
 - I - - - - - 0 - T - -
 - I - A - 0 - - - - W -
 - - - A - - - - 0 - W -
 0 - - - 0 - - - - - W -
 - 0 - 0 - - F F - 0 - -
 - - L - 0 - - - - - 0 -
 - - L - - - - 0 - 0 - -

P2427_Rose | $600 | [2H] [7C] [8A] [4H] | A:3 C:4 F:6 I:5 L:2 T:1 W:1
P5031_Nate | $2200 | [8F] [9G] [4B] [12E] [5G] | A:7 C:1 F:2 I:2 L:1

P2427_Rose [Choose Shares: C T I A W F L] [End Turn]
`;

exports[`Game Play > (93) Player 2427_Rose ends turn 1`] = `
 - - - - C - - - - - - 0
 - - - - C - - - - T T -
 - I - - - - - 0 - T - -
 - I - A - 0 - - - - W -
 - - - A - - - - 0 - W -
 0 - - - 0 - - - - - W -
 - 0 - 0 - - F F - 0 - -
 - - L - 0 - - - - - 0 -
 - - L - - - - 0 - 0 - -

P2427_Rose | $600 | [2H] [7C] [8A] [4H] [11C] | A:3 C:4 F:6 I:5 L:2 T:1 W:1
P5031_Nate | $2200 | [8F] [9G] [4B] [12E] [5G] | A:7 C:1 F:2 I:2 L:1

P5031_Nate [Choose Tile: [8F] [9G] [4B] [12E] (unavailable: [5G])]
`;

exports[`Game Play > (94) Player 5031_Nate places tile [4B] 1`] = `
 - - - - C - - - - - - 0
 - - - C C - - - - T T -
 - I - - - - - 0 - T - -
 - I - A - 0 - - - - W -
 - - - A - - - - 0 - W -
 0 - - - 0 - - - - - W -
 - 0 - 0 - - F F - 0 - -
 - - L - 0 - - - - - 0 -
 - - L - - - - 0 - 0 - -

P2427_Rose | $600 | [2H] [7C] [8A] [4H] [11C] | A:3 C:4 F:6 I:5 L:2 T:1 W:1
P5031_Nate | $2200 | [8F] [9G] [12E] [5G] | A:7 C:1 F:2 I:2 L:1

P5031_Nate [Choose Shares: C T I A W F L] [End Turn]
`;

exports[`Game Play > (95) Player 5031_Nate ends turn 1`] = `
 - - - - C - - - - - - 0
 - - - C C - - - - T T -
 - I - - - - - 0 - T - -
 - I - A - 0 - - - - W -
 - - - A - - - - 0 - W -
 0 - - - 0 - - - - - W -
 - 0 - 0 - - F F - 0 - -
 - - L - 0 - - - - - 0 -
 - - L - - - - 0 - 0 - -

P2427_Rose | $600 | [2H] [7C] [8A] [4H] [11C] | A:3 C:4 F:6 I:5 L:2 T:1 W:1
P5031_Nate | $2200 | [8F] [9G] [12E] [5G] [1D] | A:7 C:1 F:2 I:2 L:1

P2427_Rose [Choose Tile: [2H] [8A] [4H] [11C] (unavailable: [7C])]
`;

exports[`Game Play > (96) Player 2427_Rose places tile [11C] 1`] = `
 - - - - C - - - - - - 0
 - - - C C - - - - T T -
 - I - - - - - 0 - T 0 -
 - I - A - 0 - - - - W -
 - - - A - - - - 0 - W -
 0 - - - 0 - - - - - W -
 - 0 - 0 - - F F - 0 - -
 - - L - 0 - - - - - 0 -
 - - L - - - - 0 - 0 - -

P2427_Rose | $600 | [2H] [7C] [8A] [4H] | A:3 C:4 F:6 I:5 L:2 T:1 W:1
P5031_Nate | $2200 | [8F] [9G] [12E] [5G] [1D] | A:7 C:1 F:2 I:2 L:1

P2427_Rose [Merge: W T]
`;

exports[`Game Play > (97) Player 2427_Rose merges Tower 1`] = `
 - - - - C - - - - - - 0
 - - - C C - - - - T T -
 - I - - - - - 0 - T T -
 - I - A - 0 - - - - T -
 - - - A - - - - 0 - T -
 0 - - - 0 - - - - - T -
 - 0 - 0 - - F F - 0 - -
 - - L - 0 - - - - - 0 -
 - - L - - - - 0 - 0 - -

P2427_Rose | $6600 | [2H] [7C] [8A] [4H] | A:3 C:4 F:6 I:5 L:2 T:1 W:1
P5031_Nate | $2200 | [8F] [9G] [12E] [5G] [1D] | A:7 C:1 F:2 I:2 L:1

P2427_Rose [Sell (1/1) Worldwide Share] [Keep (1/1) Worldwide Share]
`;

exports[`Game Play > (98) Player 2427_Rose sells 1 orphaned Worldwide share 1`] = `
 - - - - C - - - - - - 0
 - - - C C - - - - T T -
 - I - - - - - 0 - T T -
 - I - A - 0 - - - - T -
 - - - A - - - - 0 - T -
 0 - - - 0 - - - - - T -
 - 0 - 0 - - F F - 0 - -
 - - L - 0 - - - - - 0 -
 - - L - - - - 0 - 0 - -

P2427_Rose | $7000 | [2H] [7C] [8A] [4H] | A:3 C:4 F:6 I:5 L:2 T:1
P5031_Nate | $2200 | [8F] [9G] [12E] [5G] [1D] | A:7 C:1 F:2 I:2 L:1

P2427_Rose [Choose Shares: C T I A F L] [End Turn]
`;
